# spkdfs-dev

./: CMakeLists.txt  README.md  prepareDir.sh
Jerasure-1.2/Jerasure-1.2/Examples/: cauchy_01.c  cauchy_02.c  encoder.c  jerasure_01.c
clay1/: Clay.cpp  Clay.h  Galois.h  Jerasure.cpp  Reed_sol.cpp  Reed_sol.h  clay  common.cpp  main.cpp  makefile
etc/: config.h  datanode.conf  namenode.conf
protobuf_data/: GroupListMess.proto  phxeditlog.proto  proto_create.sh  protoc
scripts/: kill.sh  reset.sh  test.sh
src/cfs/: cfs.cpp  cfs_faio.cpp
src/client/: cli_group.cpp  cli_group.h  dfscli_conf.cpp  dfscli_cycle.cpp  dfscli_cycle.h  dfscli_get.cpp  dfscli_main.cpp  dfscli_main.h  dfscli_put.cpp
src/common/: GroupListMess.pb.cpp  GroupListMess.pb.h  args.hxx  dfs_dbg.h  dfs_group.cpp  dfs_group.h  dfs_node.cpp  dfs_node.h  dfs_task.cpp  dfs_task.h  dfs_task_cmd.h  dfs_utils.cpp  dfs_utils.h  filetool.cpp  fs_permission.cpp  fs_permission.h  random_int_func.h
src/core/: dfs_event_timer.cpp  dfs_lock.cpp  dfs_lock.h  dfs_memory_pool.cpp  dfs_notice.cpp  dfs_sys.cpp  dfs_time.cpp  dfs_time.h  dfs_types.h
src/datanode/: dn_conf.cpp  dn_conf.h  dn_conn_event.cpp  dn_cycle.cpp  dn_cycle.h  dn_data_storage.cpp  dn_error_log.cpp  dn_error_log.h  dn_group.cpp  dn_group.h  dn_ip_scanner.cpp  dn_ip_scanner.h  dn_main.cpp  dn_module.cpp  dn_net_response_handler.cpp  dn_net_response_handler.h  dn_ns_service.cpp  dn_ns_service.h  dn_paxos.cpp  dn_paxos.h  dn_paxos_handler.cpp  dn_paxos_handler.h  dn_process.cpp  dn_process.h  dn_request.cpp  dn_request.h  dn_rpc_server.cpp  dn_rpc_server.h  dn_signal.cpp  dn_task_handler.cpp  dn_task_handler.h  dn_task_queue.cpp  dn_thread.cpp  dn_thread.h  dn_time.cpp  dn_worker_process.cpp  dn_worker_process.h
src/election/: GrouplistSM.cpp  GrouplistSM.h  PhxElection.cpp  PhxElection.h
src/es-code/: Clay.cpp  Clay.h  Galois.cpp  Jerasure.cpp  Jerasure.h  clay  common.cpp  common.h  main.cpp  makefile
src/faio/: faio_atomic_lock.cpp
src/namenode/: nn_blk_index.cpp  nn_blk_index.h  nn_conf.cpp  nn_conf.h  nn_cycle.cpp  nn_cycle.h  nn_dn_index.cpp  nn_dn_index.h  nn_file_index.cpp  nn_file_index.h  nn_group.cpp  nn_group.h  nn_main.cpp  nn_module.cpp  nn_net_response_handler.cpp  nn_paxos.cpp  nn_paxos.h  nn_process.cpp  nn_request.h  nn_rpc_server.cpp  nn_signal.cpp  nn_task_handler.cpp  nn_thread.h  nn_time.cpp  nn_time.h  nn_worker_process.cpp
src/paxos/: FSEditlog.cpp  FSEditlog.h  phxeditlog.pb.cpp  phxeditlog.pb.h
